[package]
name = "rust-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29"}
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
tempfile = "3.3.0"
walkdir = "2.3.2"