[package]
name = "rust-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode", "cbor", "json", "messagepack"] }
futures-util = { version = "0.3.25", features = ["sink"] }
serde_json = "1.0.82"
failure = "0.1.8"
log = "0.4.17"
env_logger = "0.9.0"
sled = "0.34.7"
dashmap = "5.4.0"
num_cpus = "1.15.0"
rayon = "1.6.1"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"
tempfile = "3.3.0"
walkdir = "2.3.2"
criterion = {version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
crossbeam-utils = "0.8.14"
panic-control = "0.1.4"

[[bench]]
name = "kv_engine_bench"
harness = false

[[bench]]
name = "thread_pool"
harness = false